# DS_ML_NLP

ML/: pyproject.toml
ML/Task/: VinodKumarPottupalli_Assignment1.ipynb
ML/scripts/: A basic feedforward neural network.ipynb  California_housing_Data.ipynb  K_Means_and_PCA.ipynb  Simple_Classification_regression_models.ipynb  iris_data.ipynb  scikit_wine.ipynb
NLP/: pyproject.toml
NLP/scripts/: 11_Seq2Seq_Generation.ipynb  12_Attention.ipynb  13_Decoder.ipynb  1_PythonTextPreprocessingColab.ipynb  2_DEMO_ADVANCED_SMOOTHING.ipynb  3_DEMO_N_Gram_models.ipynb  4_DEMO_POS_Tagging.ipynb  5_DEMO_POS_Tagging_with_5_entries.ipynb  6_DEMO_HMM.ipynb  7_DEMO_NLP_PARSING.ipynb  8_DEMO_NLP_PARSING_AND_PROCESSING.ipynb  9_Word_Representation.ipynb  LEXICIAL_SIMILARTY.ipynb  StatisticalNLP.ipynb
